--- a/exercises/html/basics/ex3.html
+++ b/exercises/html/basics/ex3.html
@@ -10,3 +10,4 @@
 	<h4 style="display: inline;">Item1 &nbsp;<s>500</s>&nbsp;300 &euro;</h4><br>
 	<h4 style="display: inline;">Item2 &nbsp;<s>800</s>&nbsp;700 &euro;</h4>
 </body>
+</html>
