--- a/exercises/html/basics/tabels.html
+++ b/exercises/html/basics/tabels.html
@@ -22,14 +22,27 @@
 			
 	
 <tr>
-	<td>Row 1 , col 1</td><td> 2 , col 1</td>
-	<td>Row 3 , col 1</td>
-	<td>Row 4 , col 1</td></tr>
+	<td rowspan="2">Row 1 , col 1</td>
+	<td>Row 1 , col 3</td>
+	<td>Row 1 , col 3</td>
+    <td>Row 1 , col 4</td>
+</tr>
 	<tr>
-	<td colspan="2">Row 1 , col 2</td>
-	<td>Row 2 , col 2</td>
+	<td>Row 2 , col 1 </td>
+	<td colspan="2">Row 2 , col 2</td>
+	<td>Row 2 , col 3</td>
+     <td>Row 2, col 2</td>
+</tr>
+<tr>
+	<td >Row 3 , col 1 </td>
+	<td>Row 3, col 2</td>
 	<td>Row 3 , col 3</td>
+     <td>Row 3, col 2</td>
+</tr >
+<tr>
+	<td >Row 4 , col 1 </td>
+	<td>Row 4, col 2</td>
+	<td>Row 4 , col 3</td>
      <td>Row 4, col 2</td>
-     <td>ROW 4,COL3</td>
 </tr>
 </table>
