--- a/exercises/html/basics/tabels.html
+++ b/exercises/html/basics/tabels.html
@@ -1,46 +1,56 @@
 <html>
-<head><title>
-	tabels</title></head>
-	<body>
-		<table border="1">
-			
-			<tr>
-			<th>HeadCol 1</th>
-			<th>HeadCol 2</th>
-			<th>HeadCol 3</th>
-</tr>
-<tr>
-	<td>Row 1 , col 1</td>
-	<td>Row 1 , col 2</td>
-	<td>Row 1 , col 3</td></tr>
-	<tr>
-	<td>Row 2 , col 1</td>
-	<td>Row 2 , col 2</td>
-	<td>Row 2 , col 3</td></tr>
-</table><BR><BR>
+<head>
+	<title>	tabels</title>
+</head>
+
+<body>
+
 <table border="1">
-<tr>
+	<tr>
+		<th>HeadCol 1</th>
+		<th>HeadCol 2</th>
+		<th>HeadCol 3</th>
+	</tr>
+
+   <tr>
+	     <td>Row 1 , col 1</td>
+	     <td>Row 1 , col 2</td>
+	     <td>Row 1 , col 3</td>
+  </tr>
+
+	<tr>
+	     <td>Row 2 , col 1</td>
+	     <td>Row 2 , col 2</td>
+	     <td>Row 2 , col 3</td>
+</tr>
+</table>
+
+<!-- new line --> 
+<br><br>
+<!-- new line --> 
+
+
+<table border="1">
+  <tr> 
 	<td rowspan="2">Row 1 , col 1</td>
 	<td  >Row 1 , col 2</td>
 	<td >Row 1 , col 3</td>
     <td>Row 1 , col 4</td>
-</tr>
+  </tr>
 	<tr>
 	<td rowspan="2" colspan="2">Row 2 , col 1 </td>
-	<td  >Row 2 , col 2</td>
-	<td>Row 2 , col 3</td>
-     <td>Row 2, col 4</td>
-</tr>
-<tr>
+	<td> Row 2 , col 2</td>
+   </tr>
+  <tr>
 	<td >Row 3 , col 1 </td>
 	<td>Row 3, col 2</td>
-	<td>Row 3 , col 3</td>
-     <td>Row 3, col 4</td>
-</tr >
+  </tr >
 <tr>
 	<td >Row 4 , col 1 </td>
-	<td colspan="3">Row 4, col 2</td>
+	<td >Row 4, col 2</td>
 	<td >Row 4 , col 3</td>
-     
+	<td >Row 4 , col 3</td>  
 </tr>
 </table>
+</body>
+</html>
