--- a/exercises/css/positioning/exercise2c.html
+++ b/exercises/css/positioning/exercise2c.html
@@ -3,7 +3,14 @@
 <head>
     <title>Exercise #2c: Positioning</title>
     <style>
-        /* add CSS here */
+        #banner{
+             width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+       
+
+        }
     </style>
 </head>
 <body>
@@ -49,9 +56,8 @@
 <p>
     Morbi commodo bibendum mattis. Vivamus commodo ex felis, quis dictum quam molestie quis. Mauris nunc felis, sagittis
     vel massa id, sodales congue nunc. Maecenas tempor nulla diam, ac fermentum purus fringilla id. Lorem ipsum dolor
-    sit amet, consectetur adipiscing elit. Nullam feugiat pulvinar ornare. Etiam non gravida eros.
+    sit amet, consectetur adipiscing elit. Nullam feugiat pulvinar ornare. Etiam non gravida eros.hhhhh
 </p>
-
 <div id="banner"></div>
 </body>
 </html>
