--- a/exercises/css/properties/exercise3.html
+++ b/exercises/css/properties/exercise3.html
@@ -2,23 +2,40 @@
 <html>
 <head>
     <title>Exercise #3: Styling source code</title>
+    <style type="text/css">
+    	pre{
+    		font-weight: bold;
+    		font-family: consolas;
+            width: 405;
+
+
+    	}
+    	a:hover {
+
+         text-decoration:underline;
+        
+    	}
+    	*{
+    		font-weight: bold;
+    	}
+    </style>
 </head>
 <body>
 
-<p>Code snippet 1:</p>
+<p style="color: #0033cc;"><a link="https://www.w3schools.com/">Code snippet 1:</a></p>
 <pre>
 h1 {
-    font-family: Verdana;
-    font-size: 1.2em;
+   <span style="color:blue;">font-family:</span> <span style="color:green;">Verdana;</span>
+    <span style="color:blue;">font-size: </span><span style="color:green;">1.2em;</span>
 }
 </pre>
 
-<p>Code snippet 2:</p>
+<p style="color:#0033cc;"><a link="https://www.w3schools.com/">Code snippet 2:</a></p>
 <pre>
 p {
-    font-family: Arial;
-    color: blue;
-    text-align: right;
+   <span style="color:blue;"> font-family:</span><span style="color:green;"> Arial;</span>
+   <span style="color:blue;"> color:</span> <span style="color:green;">blue;</span>
+   <span style="color:blue;"> text-align:</span> <span style="color:green;">right;</span>
 }
 </pre>
 
