--- a/exercises/css/positioning/exrcise2.html
+++ b/exercises/css/positioning/exrcise2.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Exercise #2a: Positioning</title>
+	<title> Ex 2A</title>
     <style>
-        div {
-            float: left;
-            margin-top: 30px;
-            margin-left: 5px;
-            width: 40px;
-            height: 40px;
-            border: 1px solid black;
-        }
+	.odd{
+		float: left;
+		border: 1px solid;
+		width:3%;
+		margin: 4px;
+		height: 55px;
+		margin-top:10px;
+	}
+	.even{
+		float: left;
+		border: 1px solid;
+		width:3%;
+		margin: 4px;
+		height: 55px;
+		margin-bottom:10px;
+	}
 
-        /* add CSS here */
-    </style>
+      </style>
 </head>
 <body>
     <div class="odd"></div>
