--- a/exercises/css/selectors/exercise2.html
+++ b/exercises/css/selectors/exercise2.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Exercise #1: Boxes and spacing</title>
+    <title>Exercise #1b: Boxes and spacing</title>
     <style>
         body{
             background-color:#f0f8ff; 
@@ -14,6 +13,9 @@
             padding: 0.5em;
             border:1px solid #333333;
             margin:7px;
+            border-radius: 10px;
+            box-shadow: 2px 2px;
+
         }
         
        
