--- a/exercises/css/selectors/exercise3.html
+++ b/exercises/css/selectors/exercise3.html
@@ -14,6 +14,13 @@
             line-height: 50px; /* align text vertically (this works only for a single line of text) */
             text-align: center;
         }
+        div:nth-child(odd){
+            background-color: red;
+        }
+
+        div:nth-child(even){
+            background-color: blue;
+        }
     </style>
 </head>
 <body>
@@ -23,7 +30,7 @@
 <div>4</div>
 <div>5</div>
 <div>6</div>
-<div>7</div>
+<div style="color:white;">7</div>
 <div>8</div>
 <div>9</div>
 <div>10</div>
