--- a/exercises/css-layouts/grid-layout/twitter app.html
+++ b/exercises/css-layouts/grid-layout/twitter app.html
@@ -6,13 +6,15 @@
 		.container{
 			display:grid;
 			grid-template-columns: 50% 50%;
-			height: 70%;
+			
+			 
+
 			
 		}
 		
 		.column{
 			text-align: center;
-			padding: 0px;
+			color:white;
 
 			
 		}
@@ -22,17 +24,17 @@
 <body>
 <div class="container">
 <div class="column"style="background-color: yellow;">
-	<h1 >h</h1></div>
+	<h1>Tweets</h1></div>
 	<div class="column"style="background-color:blue;">
-	<h1 >h</h1></div>
+	<h1>RAPLIES</h1></div>
 	
 </div>
 <div class="container">
 <div class="column"style="background-color:red;">
-	<h1 >h</h1>
+	<h1 >Search</h1>
 </div>
 	<div class="column"style="background-color:green;">
-	<h1 >h</h1></div>
+	<h1 >Messages</h1></div>
 </div>
 
 
