--- a/exercises/css-layouts/grid-layout/Photo Gallery.html
+++ b/exercises/css-layouts/grid-layout/Photo Gallery.html
@@ -6,7 +6,8 @@
 		.grid-container {
   display: grid;
   grid-template-columns:repeat(5 ,1fr);
-  grid-gap: 10px;
+  padding-top: 10px;
+  text-align: center;
   
 }
 
@@ -15,15 +16,15 @@
   font-size: 30px;
 }
 
-.item1 {
-  grid-column-start: 1;
-  grid-column-end: 4;
+.item2 {
+  grid-column: 2/5;
+  grid-row: 1/3;
 }
 </style>
 </head>
 <body>
 
-<h1>Grid Lines</h1>
+
 
 <div class="grid-container">
   <div class="item1"><img src="istanbul.jpeg"></div>
