--- a/exercises/bootstrap/exercise2.html
+++ b/exercises/bootstrap/exercise2.html
@@ -54,7 +54,44 @@
             <div class="blue"></div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-6 col-md-4">
+            <div class="yellow"></div>
+        </div>
+         <div class="col-6 col-md-4">
+            <div class="yellow"></div>
+        </div>
+         <div class="col-6 col-md-4">
+            <div class="yellow"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="green"></div>
+        </div>
+        <div class="col-sm-4">
+            <div class="lightgreen"></div>
+        </div>
+        </div>
 
+        <div class="row">
+        <div class="col-md-3">
+            <div class="orange"></div>
+        </div>
+        <div class="col-md-3">
+            <div class="orange"></div>
+        </div>
+        <div class="col-md-3">
+            <div class="orange"></div>
+        </div>
+        <div class="col-md-3">
+            <div class="orange"></div>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col">
+            <div class="grey"></div>
+        </div>
 </div>
 
 </body>
